feat: :lipstick: Mejora del HTML y CSS
Se agrearon imágenes y recursos a las carpeta storage

--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cream</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <img src="src/storage/img/logo.png" alt="Logo">
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Buy now</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <img src="src/storage/img/search.png" alt="Search">
+            <img src="src/storage/img/shopping-cart.png" alt="Buy car">
+        </div>
+    </header>
+    <main>
+        <div>
+            <img src="images/ice-cream.png" alt="Titulo"> <!-- cambiar a letras -->
+            <div>
+                <img src="src/storage/img/ice-cream-pink.png" alt="Ice cream #1">
+                <img src="src/storage/img/ice-cream-choco.png" alt="Ice cream #2">
+                <img src="src/storage/img/ice-cream-green.png" alt="Ice cream #3">
+            </div>
+        </div>
+        <div>
+            <div>
+                <h1>ICE CREAM SHOP</h1>
+                <span>FREE DELIVERY</span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quod perspiciatis accusamus debitis architecto, inventore harum alias illo voluptatum beatae! Adipisci debitis ab aspernatur exercitationem iusto itaque quidem fugit perspiciatis!</p>
+            </div>
+            <a href="#">Buy now</a>
+        </div>
+    </main>
 </body>
 </html>
