--- a/index.html
+++ b/index.html
@@ -7,43 +7,45 @@
     <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
-    <header>
-        <div>
-            <img src="src/storage/img/logo.png" alt="Logo">
-        </div>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Buy now</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div>
-            <img src="src/storage/img/search.png" alt="Search">
-            <img src="src/storage/img/shopping-cart.png" alt="Buy car">
-        </div>
-    </header>
-    <main>
-        <div>
-            <img src="images/ice-cream.png" alt="Titulo"> <!-- cambiar a letras -->
-            <div>
-                <img src="src/storage/img/ice-cream-pink.png" alt="Ice cream #1">
-                <img src="src/storage/img/ice-cream-choco.png" alt="Ice cream #2">
-                <img src="src/storage/img/ice-cream-green.png" alt="Ice cream #3">
+    <div class="logo">
+        <img src="src/storage/img/logo-cream-helado.webp" alt="Logo">
+    </div>
+    <div class="menu">
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">BUY NOW</a></li>
+        </ul>
+    </div>
+    <div class="options">
+        <img src="src/storage/img/search.png" alt="Search">
+        <img src="src/storage/img/shopping-cart.png" alt="Buy car">
+    </div>
+    <div class="product">
+        <div class="product__title">
+            <div class="product__text">
+                <p>Choose Your Favorite</p>
+                <h1>ICE CREAM</h1>
+                <h3>FLAVOR</h3>
             </div>
         </div>
-        <div>
-            <div>
-                <h1>ICE CREAM SHOP</h1>
-                <span>FREE DELIVERY</span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quod perspiciatis accusamus debitis architecto, inventore harum alias illo voluptatum beatae! Adipisci debitis ab aspernatur exercitationem iusto itaque quidem fugit perspiciatis!</p>
-            </div>
+        <div class="product__img">
+            <img src="src/storage/img/ice-cream-pink.png" alt="Ice cream #1">
+            <img src="src/storage/img/ice-cream-choco.png" alt="Ice cream #2">
+            <img src="src/storage/img/ice-cream-green.png" alt="Ice cream #3">
+        </div>
+    </div>
+    <div class="info">
+        <div class="info__text">
+            <h1>ICE CREAM SHOP</h1>
+            <span>FREE DELIVERY</span>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quod perspiciatis accusamus debitis architecto, inventore harum alias illo voluptatum beatae! Adipisci debitis ab aspernatur exercitationem iusto itaque quidem fugit perspiciatis!</p>
+        </div>
+        <div class="info__btn">
             <a href="#">Buy now</a>
         </div>
-    </main>
+    </div>
 </body>
 </html>
